--- a/animate-something/wa8.html
+++ b/animate-something/wa8.html
@@ -20,16 +20,16 @@
     </nav>
     <div class="container">
     <div class="left-border">
-        <img src="/img/beachBall.png" alt="beach ball">
-        <img src="/img/beachBall.png" alt="beach ball">
-        <img src="/img/beachBall.png" alt="beach ball">
+        <img src="beachBall.png" alt="beach ball">
+        <img src="beachBall.png" alt="beach ball">
+        <img src="beachBall.png" alt="beach ball">
     </div>
     
-        <img src="/img/beach.jpeg" alt="beach image">
+        <img src="beach.jpeg" alt="beach image">
     <div class="right-border">
-        <img src="/img/beachBall.png" alt="beach ball">
-        <img src="/img/beachBall.png" alt="beach ball">
-        <img src="/img/beachBall.png" alt="beach ball">
+        <img src="beachBall.png" alt="beach ball">
+        <img src="beachBall.png" alt="beach ball">
+        <img src="beachBall.png" alt="beach ball">
     </div>
     
     </div>
