--- a/image-carousel/gallery-start/wa11.html
+++ b/image-carousel/gallery-start/wa11.html
@@ -5,7 +5,7 @@
 
     <title>Image gallery</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="wa11.css">
     
   </head>
 
@@ -22,6 +22,6 @@
 
 
     </div>
-    <script src="main.js"></script>
+    <script src="wa11.js"></script>
   </body>
 </html>
