--- a/cyof/function-start.html
+++ b/cyof/function-start.html
@@ -95,6 +95,8 @@
         let txt = prompt("Enter a message!");
         return(txt);
       }
+    
+      // prompt user until they put in the correct input
       function userMsg(){
         do{
           var txt = prompt("Is this a warning or chat?").toLowerCase();
